k8s/namespaces/external-dns/deployment-wishlist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns-wishlist
  namespace: external-dns
  labels:
    app.kubernetes.io/name: external-dns-wishlist
    app.kubernetes.io/part-of: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns-wishlist
      app.kubernetes.io/part-of: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns-wishlist
        app.kubernetes.io/part-of: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:latest
        args:
        - --source=ingress
        - --source=service
        - --domain-filter=wishin.app
        - --provider=google
        - --google-project=wishlist-4362e
        - --registry=txt
        - --txt-owner-id=k8s
        securityContext:
          runAsUser: 65534
