k8s/namespaces/external-dns/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/part-of: external-dns

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: external-dns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
