k8s/namespaces/external-dns/01-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-dns
  namespace: external-dns
  labels:
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/part-of: external-dns

spec:
  egress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: external-dns
      app.kubernetes.io/part-of: external-dns
  policyTypes:
  - Ingress
  - Egress
